Windows: Fix one of the two file dialog bottlenecks.

This patch reduces the number of calls to GetFileAttributesEx()
when icon lookup is being done.

The second bottleneck is a couple of isSymLink() calls. Will fix
that next.

Task-number: QTBUG-13182
Change-Id: Ife3ff6cfb49d2294c501253ccc55d8c26036be94
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>

cregit: b611da0d97408e1d3c9fabed3ef9e7e1b8c5f7da https://github.com/qt/qtbase/commit/b611da0d97408e1d3c9fabed3ef9e7e1b8c5f7da